[tool.poetry]
name = "unfortunatewindingapplicationframework"
version = "0.1.0"
description = ""
authors = ["ELVIN"]

[tool.poetry.dependencies]
python = "^3.8"
user-agent = "^0.1.9"
colorama = "^0.4.3"
pyfiglet = "^0.8.post1"
pyTelegramBotAPI = "^3.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
